@@ -1311,6 +1311,18 @@ body {
 
 <hr />
 
+<h4>MenuConfirm</h4>
+
+<p>Description of menus/confirm.txt</p>
+
+<p><strong>close</strong> | <code>point</code> | Position of the close button.</p>
+
+<p><strong>label_title</strong> | <code>label</code> | Position of the title text.</p>
+
+<p><strong>action_list</strong> | <code>point</code> | Position of the action selector widget.</p>
+
+<hr />
+
 <h4>Menu</h4>
 
 <p>Description of menus in menus/</p>
